Add register and login
