# main.go
@@ -1,19 +1,24 @@
 package main
 
 import (
-	"bank-interface/api"
-	"bank-interface/api/middleware"
-	_ "bank-interface/docs"
-	"bank-interface/domain/properties"
-	"bank-interface/integration/dadata"
+	"database/sql"
 	"encoding/json"
 	"fmt"
+	"github.com/Unbel1evab7e/bank-interface/api"
+	"github.com/Unbel1evab7e/bank-interface/api/middleware"
+	"github.com/Unbel1evab7e/bank-interface/db/repository"
+	_ "github.com/Unbel1evab7e/bank-interface/docs"
+	"github.com/Unbel1evab7e/bank-interface/domain"
+	"github.com/Unbel1evab7e/bank-interface/domain/properties"
+	"github.com/Unbel1evab7e/bank-interface/integration/dadata"
+	"github.com/Unbel1evab7e/bank-interface/service"
 	"github.com/gin-gonic/gin"
+	_ "github.com/lib/pq"
+	"github.com/sirupsen/logrus"
 	"github.com/spf13/viper"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"go.uber.org/dig"
-	"log"
 	"os"
 	"strings"
 )
@@ -30,6 +35,7 @@ func main() {
 	engine.Use(gin.Recovery())
 
 	registerProperties(container)
+	registerDbConnect(container)
 	registerRepositories(container)
 	registerServices(container)
 	registerClients(container)
@@ -44,18 +50,18 @@ func setEnv() {
 			keys := strings.Split(arg, ":")
 
 			if len(keys) < 2 {
-				environment = EnvironmentStage
+				environment = domain.EnvironmentStage
 			}
 
 			switch keys[1] {
-			case EnvironmentStage:
-				environment = EnvironmentStage
+			case domain.EnvironmentStage:
+				environment = domain.EnvironmentStage
 				break
-			case EnvironmentProduction:
-				environment = EnvironmentProduction
+			case domain.EnvironmentProduction:
+				environment = domain.EnvironmentProduction
 				break
 			default:
-				environment = EnvironmentStage
+				environment = domain.EnvironmentStage
 			}
 		}
 	}
@@ -66,7 +72,7 @@ func setConfig() {
 	viper.AddConfigPath("./")
 	err := viper.ReadInConfig()
 	if err != nil {
-		panic(fmt.Errorf("fatal error config file: %w", err))
+		panic(fmt.Errorf("fatal error config file: %w ", err))
 	}
 }
 func registerProperties(container *dig.Container) {
@@ -75,15 +81,58 @@ func registerProperties(container *dig.Container) {
 	})
 
 	if err != nil {
-		log.Fatal("Failed to register properties")
+		logrus.Fatal("Failed to register dadata properties ", err)
 	}
 
+	err = container.Provide(func() *properties.DBProperties {
+		return parseProperties[properties.DBProperties]("database")
+	})
+
+	if err != nil {
+		logrus.Fatal("Failed to register database properties ", err)
+	}
+
+}
+
+func registerDbConnect(container *dig.Container) {
+	err := container.Invoke(func(dbProperties *properties.DBProperties) {
+		connection := fmt.Sprintf("dbname=%s user=%s password=%s host=%s port=%s sslmode=disable",
+			dbProperties.Name,
+			dbProperties.User,
+			dbProperties.Pass,
+			dbProperties.Host,
+			dbProperties.Port)
+
+		dsn := fmt.Sprintf("%s", connection)
+		dbConn, err := sql.Open(`postgres`, dsn)
+
+		if err != nil {
+			logrus.Fatal("Failed to connection database ", err)
+		}
+
+		err = dbConn.Ping()
+
+		if err != nil {
+			logrus.Fatal("Fail to ping database ", err)
+		}
+
+		err = container.Provide(func() *sql.DB {
+			return dbConn
+		})
+		if err != nil {
+			logrus.Fatal("Fail to provide connection ", err)
+		}
+	})
+
+	if err != nil {
+		logrus.Fatal("Fail to invoke properties ", err)
+	}
 }
 func parseProperties[T interface{}](path string) *T {
 	raw, err := json.Marshal(viper.Get(path))
 
 	if err != nil {
-		log.Fatalf("Cannot get props from config %s with path %s", err.Error(), path)
+		logrus.Fatalf("Cannot get props from config %s with path %s ", err.Error(), path)
 	}
 
 	var props T
@@ -91,7 +140,7 @@ func parseProperties[T interface{}](path string) *T {
 	err = json.Unmarshal(raw, &props)
 
 	if err != nil {
-		log.Fatalf("Cannot get props from config %s with path %s", err.Error(), path)
+		logrus.Fatalf("Cannot get props from config %s with path %s ", err.Error(), path)
 	}
 
 	return &props
@@ -99,21 +148,27 @@ func parseProperties[T interface{}](path string) *T {
 func registerClients(container *dig.Container) {
 	err := container.Provide(dadata.New)
 	if err != nil {
-		log.Fatal("Failed to register dadataClient", err)
+		logrus.Fatal("Failed to register dadataClient ", err)
 	}
 }
 func registerRepositories(container *dig.Container) {
-
+	err := container.Provide(repository.NewPersonRepository)
+	if err != nil {
+		logrus.Fatal("Fail to register personRepository ", err)
+	}
 }
 func registerServices(container *dig.Container) {
-
+	err := container.Provide(service.NewPersonService)
+	if err != nil {
+		logrus.Fatal("Fail to register personService ", err)
+	}
 }
 
 func registerMiddleware(container *dig.Container, engine *gin.Engine) {
 	err := container.Provide(middleware.NewLoggerMiddleware)
 
 	if err != nil {
-		log.Fatal("Failed to provide logging middleware", err)
+		logrus.Fatal("Failed to provide logging middleware ", err)
 	}
 
 	err = container.Invoke(func(loggingMiddleware *middleware.RequestLoggingMiddleware) {
@@ -121,16 +176,16 @@ func registerMiddleware(container *dig.Container, engine *gin.Engine) {
 	})
 
 	if err != nil {
-		log.Fatal("Failed to invoke logging middleware", err)
+		logrus.Fatal("Failed to invoke logging middleware ", err)
 	}
 }
 
-// @title           Swagger Example API
-// @version         1.0
-// @description     This is a Test.
+//	@title			Swagger Example API
+//	@version		1.0
+//	@description	This is a Test.
 
-// @host      localhost:8080
-// @BasePath  /api/v1
+//	@host		localhost:8080
+//	@BasePath	/api/v1
 
 func registerControllers(container *dig.Container, engine *gin.Engine) {
 	engine.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -140,13 +195,13 @@ func registerControllers(container *dig.Container, engine *gin.Engine) {
 	})
 
 	if err != nil {
-		log.Fatal("Failed to provide engine", err)
+		logrus.Fatal("Failed to provide engine ", err)
 	}
 
 	err = container.Provide(api.NewPersonController)
 
 	if err != nil {
-		log.Fatal("Failed to provide personController", err)
+		logrus.Fatal("Failed to provide personController ", err)
 	}
 
 	err = container.Invoke(func(personController *api.PersonController) {
